# neurobiomorphic-ai

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  minimal_demo.py  production_readiness_test.py  pyproject.toml  requirements.txt  setup.py  test_components.py  test_huggingface_connectivity.py  test_huggingface_offline.py
.github/: copilot-instructions.md
configs/: default.yaml  meta_learning_experiment.yaml  reasoning_experiment.yaml  uncertainty_experiment.yaml
examples/: demo.py
experiments/: run_experiments.py
src/: __init__.py
src/hierarchical_agent/: hierarchical_agent.py  low_level_policy.py
src/monitoring/: __init__.py  monitoring_system.py
src/neural_plasticity/: advanced_plasticity_layer.py  neuroplastic_network.py
src/neurobiomorphic/: __init__.py
src/neurobiomorphic/config/: __init__.py  config_system.py
src/neurobiomorphic/language_reasoning/: __init__.py  language_reasoner.py
src/neurobiomorphic/monitoring/: monitoring_system.py
src/neurobiomorphic/neural_plasticity/: __init__.py  advanced_plasticity_layer.py
src/neurobiomorphic/reasoning/: __init__.py  causal_engine.py  symbolic_neural_hybrid.py  uncertainty_quantification.py
src/neurobiomorphic_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reasoning/: __init__.py  causal_engine.py  meta_learning.py  symbolic_neural_hybrid.py  uncertainty_quantification.py
src/reinforcement_learning/: advanced_rl_agent.py
tests/: basic_test.py  integration_test.py
venv_test/: pyvenv.cfg
